--- a/index.html
+++ b/index.html
@@ -7,4 +7,10 @@
   <body>
 realm
   </body>
+<object type="application/x-shockwave-flash" 
+  data="Client-noob.swf" 
+  width="500" height="500">
+  <param name="movie" value="Client-noob.swf" />
+  <param name="quality" value="high"/>
+</object>
 </html>
