--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>cc</title>
   </head>
   <body>
-realm
+realmb
   </body>
 <object type="application/x-shockwave-flash" 
   data="Client-noob.swf" 
