--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <object type="application/x-shockwave-flash" 
   data="Client-noob.swf" 
-  width="1920" height="1080">
-  <param name="movie" value="Client-noob.swf" />
+  width="1920" height="1080" align="middle">
+  <param name="movie" value="Client-noob.swf"/>
   <param name="quality" value="high"/>
 </object>
 </html>
