--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
-<!DOCTYPE html>
-<html>
-<object type="application/x-shockwave-flash" 
-  data="Client-noob.swf" 
-  width="1920" height="1080" align="middle">
-  <param name="movie" value="Client-noob.swf"/>
-  <param name="quality" value="high"/>
-</object>
-</html>
+<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" WIDTH="320" HEIGHT="240" id="Yourfilename" ALIGN="">
+<PARAM NAME=movie VALUE="Client-noob.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#333399> <EMBED src="Client-noob.swf" quality=high bgcolor=#333399 WIDTH="320" HEIGHT="240" NAME="Yourfilename" ALIGN="" TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"></EMBED> </OBJECT>
