--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" WIDTH="1920" HEIGHT="1080" id="Yourfilename" ALIGN="middle">
-<PARAM NAME=movie VALUE="Client-noob.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#333399> <EMBED src="Client-noob.swf" quality=high bgcolor=#333399 WIDTH="1920" HEIGHT="1080" NAME="Yourfilename" ALIGN="" TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"></EMBED> </OBJECT>
+<center>
+<object type="application/x-shockwave-flash" 
+  data="Client-noob.swf" 
+  width="800" height="600">
+  <param name="movie" value="Client-noob.swf" />
+  <param name="quality" value="high"/>
+</object>
+<center>
