--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <object type="application/x-shockwave-flash" 
   data="client.swf" 
   width="800" height="600">
-  <param name="movie" value="client.swf" />
+  <param name="movie" value="clients.swf" />
   <param name="quality" value="high"/>
 </object>
 <center>
 <html>
-  <body bgcolor="black">
+  <body bgcolor="blue">
   </body>
 </html>
