--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <center>
 <object type="application/x-shockwave-flash" 
-  data="client.swf" 
+  data="clarinets.swf" 
   width="800" height="600">
-  <param name="movie" value="clients.swf" />
+  <param name="movie" value="clarinets.swf" />
   <param name="quality" value="high"/>
 </object>
 <center>
